--- a/coffe/WinFormsApp1/Coffee.csproj
+++ b/coffe/WinFormsApp1/Coffee.csproj
@@ -28,6 +28,7 @@
 
   <ItemGroup>
     <PackageReference Include="FontAwesome.Sharp" Version="6.3.0" />
+    <PackageReference Include="iTextSharp" Version="5.5.13.3" />
   </ItemGroup>
 
   <ItemGroup>
